<resources>
    <string name="app_name">Inventory</string>
    <string name="TextView">Ole Ole</string>
    <string name="tieName">User</string>
    <string name="tiePassword">Password</string>
    <string name="tvTitle">Login</string>
    <string name="btGoogle">Google</string>
    <string name="btFacebook">Facebook</string>
    <string name="btSingUp">Sing up</string>
    <string name="cbRemember">Remember me</string>
    <string name="chkRemember">Recuerdame</string>
    <string name="btSignIn">Login</string>
    <string name="tvTitleSingUp">Register</string>
    <string name="tieEmail">Email</string>
    <string name="tieConfirmPassword">ConfirmPassword</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvLoading">Cargando...</string>
    <string name="tvNoData">Lo sentimos, no hay datos</string>
    <string name="btInventario">Inventario</string>
    <string name="btDependencias">Dependencias</string>
    <string name="btProductos">Productos</string>
    <string name="btPerfil">Perfil</string>
    <string name="btConfiguracion">Configuracion</string>
    <string name="btSecciones">Secciones</string>
    <string name="txtName">Name:</string>
    <string name="txtShortName">ShortName:</string>
    <string name="txtDescription">Descriprion:</string>
    <string name="btCambios">Guardar Cambios</string>
    <string name="title_delete_dependency">Eliminar dependencia</string>
    <string name="message_delete_dependency">¿Quiere eliminar la dependencia %1$s ?</string>
    <string name="confirm_delet_dependency">Se ha eliminado la dependencia</string>
    <string name="undo">Undo</string>
    <string name="menu_settings">Opciones</string>
    <string name="menu_help">Ayuda</string>
    <string name="menu_aboutus">Sobre mi</string>
    <string name="action_dependency">Dependencia</string>
    <string name="action_section">Section</string>
    <string name="action_product">Product</string>
</resources>